[package]
name = "neots"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0", features = ["derive"] }
text_io = "0.1.12"
rpassword = "0.0.4"
chacha20poly1305 = "0.10.1"
reqwest = { version = "0.11.13", features = ["blocking", "json"] }
base64 = "0.20.0"
serde_json = "1.0.91"
serde = { version = "1.0.151", features = ["derive"] }
chrono = "0.4.23"
config = "0.13.3"
serde_derive = "1.0.151"
shellexpand = "3.0.0"
